[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitflow-api"
version = "0.4.0"
description = "GitFlow automation library and CLI with GitLab support"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "Mauyr Alexandre Pereira", email = "mauyr.pereira@inovapro.com.br" }
]
keywords = ["gitflow", "gitlab", "release", "merge-request", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
  "python-gitlab>=4,<6",
  "tomli>=2.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "ruff>=0.6",
  "twine>=5.1"
]

[project.scripts]
gitflow = "gitflow_api.gitflow:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
